--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,10 @@
         td:first-child {
             width: 1em;
         }
+
+        .example-link {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -64,7 +68,7 @@
     <div class="container-fluid">
         <div class="row" style="margin-top: 10px;">
             <div class="col-md-4">
-                <img src="./resources/app-logo.svg" style="width: 100%; margin-bottom: 10px;">
+                <img class="copyright-toggle" src="./resources/app-logo.svg" style="width: 100%; margin-bottom: 10px;">
                 <form id="library-form" class="form-horizontal">
                     <div class="form-group">
                         <label for="library_path" class="sr-only control-label">Path to save files to</label>
@@ -72,6 +76,7 @@
                             <input type="text" id="library_path" class="form-control" placeholder="Library path" value="" readonly="readonly" />
                         </div>
                         <button type="submit" id="btnChoosePath" class="btn btn-primary">Choose path</button>
+                        <button type="button" id="open-folder-in-os" class="btn btn-secondary">Open path</button>
                     </div>
                 </form>
             </div>
@@ -81,10 +86,10 @@
                     Tired of clicking every single file and choosing the right directory?<br />
                     Look no further, here is a tool that let you download all stems from a particular song in one go.
                     <br/><br />
-                    <strong>Examples</strong><br />
-                    http://ccmixter.org/files/7OOP3D/63981<br />
-                    http://ccmixter.org/files/mactonite/64113<br />
-                    http://ccmixter.org/files/airtone/64030<br />
+                    <strong>Examples</strong> (Hint click on any example)<br />
+                    <span class="example-link">http://ccmixter.org/files/7OOP3D/63981</span><br />
+                    <span class="example-link">http://ccmixter.org/files/mactonite/64113</span><br />
+                    <span class="example-link">http://ccmixter.org/files/airtone/64030</span><br />
                 </div>
             </div>
         </div>
@@ -95,7 +100,7 @@
                     <div class="form-group">
                         <label for="url" class="sr-only control-label">URL</label>
                         <div>
-                            <input type="text" id="url" class="form-control" placeholder="URL" value="http://ccmixter.org/files/7OOP3D/63981" />
+                            <input type="text" id="url" class="form-control" placeholder="URL" />
                         </div>
                     </div>    
                     <button type="submit" id="btnCheck" class="btn btn-primary">Check</button>
@@ -117,6 +122,24 @@
           </form>
         </div>
     </div>
+
+    <div id="copyright" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">ccMixter Stem Downloader</h5>
+            </div>
+            <div class="modal-body">
+              <p>GitHub:<br /><a href="https://github.com/rewired/ccmixter-downloader-desktop" target="_blank">https://github.com/rewired/ccmixter-downloader-desktop</a></p>
+              <p>&copy; 2021 by Bjoern Ahlers</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary copyright-toggle" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+    </div>
+
     <script defer src="./render.js"></script>
 </body>
 </html>
