--- a/src/index.html
+++ b/src/index.html
@@ -66,9 +66,9 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row" style="margin-top: 10px;">
+        <div class="row" style="margin: 10px 0 20px 0;">
             <div class="col-md-4">
-                <img class="copyright-toggle" src="./resources/app-logo.svg" style="width: 100%; margin-bottom: 10px;">
+                <img class="copyright-toggle" src="./resources/app-logo.svg" style="width: 100%; margin-bottom: 10px; cursor: pointer;">
                 <form id="library-form" class="form-horizontal">
                     <div class="form-group">
                         <label for="library_path" class="sr-only control-label">Path to save files to</label>
@@ -81,24 +81,24 @@
                 </form>
             </div>
             <div class="col-md-8">
-                <h2>Download stems from ccMixter</h2>
+                <h2 style="margin-top: -9px;">Download stems from ccMixter</h2>
                 <div>
                     Tired of clicking every single file and choosing the right directory?<br />
                     Look no further, here is a tool that let you download all stems from a particular song in one go.
                     <br/><br />
-                    <strong>Examples</strong> (Hint click on any example)<br />
+                    <strong>Examples</strong> (Hint click on any example below)<br />
                     <span class="example-link">http://ccmixter.org/files/7OOP3D/63981</span><br />
-                    <span class="example-link">http://ccmixter.org/files/mactonite/64113</span><br />
-                    <span class="example-link">http://ccmixter.org/files/airtone/64030</span><br />
+                    <span class="example-link">http://ccmixter.org/files/Apoxode/63986</span><br />
+                    <!--span class="example-link">http://ccmixter.org/files/airtone/64030</!--span><br /-->
                 </div>
             </div>
         </div>
-        <hr size="1" />
+        
         <div class="row">
             <div class="col-md-12">
                 <form id="song" class="form-horizontal">
                     <div class="form-group">
-                        <label for="url" class="sr-only control-label">URL</label>
+                        <label for="url" class="sr-only control-label">Song URL at ccMixter.org</label>
                         <div>
                             <input type="text" id="url" class="form-control" placeholder="URL" />
                         </div>
