--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 
-    <title>Download stems from ccMixter</title>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <title>ccMixter Downloader</title>
+    <link rel="stylesheet" href="./resources/bootstrap.min.css" />
+    <!--link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" /-->
+    <link rel="stylesheet" />
     <style>
         body{
-            background-color: #eee;
+            /*background-color: #eee;*/
             margin: auto;
             overflow: hidden;
         }
@@ -88,6 +90,12 @@
     </div>
 
     <div class="container-fluid">
+        <div class="row" style="-webkit-app-region: drag">
+            <div class="col-md-12" style="margin: 5px">
+                <strong>ccMixter Downloader</strong>
+            </div>
+        </div>
+
         <div class="row" style="margin: 10px 0 20px 0;">
             <div class="col-md-4">
                 <img class="copyright-toggle" src="./resources/app-logo.svg" style="width: 100%; margin-bottom: 10px; cursor: pointer;">
